cmake_minimum_required(VERSION 3.17)
project(LearnAdvancedCppProgramming)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory([Section01]Introduction)
add_subdirectory([Section02]Exceptions)
add_subdirectory([Section03]Files)
add_subdirectory([Section04]The\ Standard\ Template)
add_subdirectory([Section05]Operator\ Overloading)
add_subdirectory([Section06]Template\ Classes\ and\ Functions)
add_subdirectory([Section07]Passing\ Functions\ to\ Functions)
add_subdirectory([Section08]C++11's\ Amazing\ New\ Features)
add_subdirectory([Section09]About\ GUI\ Programming\ in\ C++)
add_subdirectory([Section10]A\ Project\ of\ Drawing\ Fractral\ Images)
add_subdirectory([Section11]Bonus)

#add_executable(LearnAdvancedCppProgramming main.cpp)