add_subdirectory([012]Vectors)
add_subdirectory([013]Vectors\ and\ Memory)
add_subdirectory([014]Two-Dimensional\ Vectors)
add_subdirectory([015]Lists)
add_subdirectory([016]Maps)
add_subdirectory([017]Custom\ Objects\ as\ Map\ Values)
add_subdirectory([018]Custom\ Objects\ as\ Map\ Keys)
add_subdirectory([019]Multimaps)
add_subdirectory([020]Sets)
add_subdirectory([021]Stacks\ and\ Queues)
add_subdirectory([022]Sorting\ Vectors,\ Deque\ and\ Friend)
add_subdirectory([023]STL\ Complex\ Data\ Types)