add_subdirectory([039]Decltype,\ Typeid\ and\ Name\ Mangling)
add_subdirectory([040]The\ Auto\ Keyword)
add_subdirectory([041]Range-Based\ Loops)
add_subdirectory([042]Nested\ Template\ Classes)
add_subdirectory([043]A\ Ring\ Buffer\ Class)
add_subdirectory([044]Making\ Classes\ Iterable)
add_subdirectory([045]Initialization\ in\ C++\ 98)
add_subdirectory([046]Initialization\ in\ C++\ 11)
add_subdirectory([047]Initializer\ Lists)
add_subdirectory([048]Object\ Initialization,\ Default\ and\ Delete)
add_subdirectory([049]Introducing\ Lambda\ Expressions)
add_subdirectory([050]Lambda\ Parameters\ and\ Return)
add_subdirectory([051]Lambda\ Capture\ Expressions)
add_subdirectory([052]Capturing\ this\ With\ Lambdas)
add_subdirectory([053]The\ Standard\ Function\ Type)
add_subdirectory([054]Mutable\ Lambdas)
add_subdirectory([055]Delegating\ Constructors)
add_subdirectory([056]Elision\ and\ Optimization.avi)
add_subdirectory([057]Constructors\ and\ Memory)
add_subdirectory([058]Rvalues\ and\ LValues)
add_subdirectory([059]LValue\ References)
add_subdirectory([060]Rvalue\ References)
add_subdirectory([061]Move\ Constructors)
add_subdirectory([062]Move\ Assignment\ Operators)
add_subdirectory([063]Static\ Casts)
add_subdirectory([064]Dynamic\ Cast)
add_subdirectory([065]Reinterpret\ Cast)
add_subdirectory([066]Perfect\ Forwarding)
add_subdirectory([067]Bind)
add_subdirectory([068]Unique\ Pointers)
add_subdirectory([069]Shared\ Pointers)