add_subdirectory([071]Source\ Code)
add_subdirectory([072]Fractal\ Creator\ -\ Hello\ World)
add_subdirectory([073]Bitmap\ File\ Headers)
add_subdirectory([074]Bitmap\ Info\ Headers)
add_subdirectory([075]A\ Bitmap\ Class)
add_subdirectory([076]Bitmap\ Memory)
add_subdirectory([077]Bitmap\ Header\ Values)
add_subdirectory([078]Writing\ a\ Bitmap)
add_subdirectory([079]Setting\ Bitmap\ Pixels)
add_subdirectory([080]Scaling)
add_subdirectory([081]A\ Mandelbrot\ Class)
add_subdirectory([082]The\ Fractal\ Algorithm)
add_subdirectory([083]Improving\ the\ Image)
add_subdirectory([084]The\ Colour\ Histogram)
add_subdirectory([085]Validating\ the\ Histogram)
add_subdirectory([086]Eliminating\ Max\ Iterations)
add_subdirectory([087]Storing\ the\ Iterations)
add_subdirectory([088]Using\ the\ Histogram)
add_subdirectory([089]Colour\ Transforms)
add_subdirectory([090]A\ Zoom\ Class)
add_subdirectory([091]The\ Zoom\ List\ Class)
add_subdirectory([092]Centering\ and\ Scaling)
add_subdirectory([093]Applying\ the\ Zoom)
add_subdirectory([094]Zooming\ In)
add_subdirectory([095]Reorganising\ Main)
add_subdirectory([096]Implementing\ FractalCreator)
add_subdirectory([097]An\ RGB\ Class)
add_subdirectory([098]Using\ the\ RGB\ Class)
add_subdirectory([099]Specifying\ Color\ Ranges)
add_subdirectory([100]Calculating\ Range\ Totals)
add_subdirectory([101]Checking\ the\ Range\ Totals)
add_subdirectory([102]Getting\ the\ Pixel\ Range\ \(updated\))
add_subdirectory([103]Range-Based\ Coloring)
add_subdirectory([104]More\ Exercises)
